deployments/alexa-shopping-list-updater-skill/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: alexa-shopping-list-updater-skill
  namespace: default
  labels:
    app.kubernetes.io/name: alexa-shopping-list-updater-skill
spec:
  ports:
    - name: alexa-http
      port: 8085
      protocol: TCP
      targetPort: alexa-http
  selector:
    app.kubernetes.io/name: alexa-shopping-list-updater-skill
