deployments/alexa-shopping-list-updater-skill/ingress-prod.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: alexa-shopping-list-updater-skill
  namespace: default
spec:
  tls:
    - hosts:
        - $DNS_DOMAIN
      secretName: alexa-shopping-list-updater-skill-tls
  rules:
    - host: $DNS_DOMAIN
      http:
        paths:
          - path: "/"
            pathType: Exact
            backend:
              service:
                name: alexa-shopping-list-updater-skill
                port:
                  number: 8085
