deployments/alexa-shopping-list-updater-skill/ingress-staging.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-staging
  name: alexa-shopping-list-updater-skill
  namespace: home-automation
spec:
  tls:
    - hosts:
        - $DNS_DOMAIN
      secretName: alexa-shopping-list-updater-skill-tls
  rules:
    - host: $DNS_DOMAIN
      http:
        paths:
          - path: "/"
            backend:
              serviceName: alexa-shopping-list-updater-skill
              servicePort: 8085
